--- a/styles/main.css
+++ b/styles/main.css
@@ -89,3 +89,33 @@ p{
 .colorchange p{
   color:#422a14;
 }
+
+.whole{
+  background-color: #755E4A
+
+}
+
+.button {
+  background-color: beige;
+  border: none;
+  color: #755E4A;
+  margin: 10px 220px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+
+  cursor: pointer;
+
+}
+
+.form-label{
+  color:white;
+}
+
+h2{
+  color:white;
+  text-transform: uppercase;
+
+}
